<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">File Manager</string>
    <string name="loading_tip">Loading data</string>
    <string name="loading_more">Loading more...</string>
    <string name="category_search_hint">Input keyword</string>
    <string name="category_sort">Sort</string>
    <string name="category_apk">Apks</string>
    <string name="category_document">Docs</string>
    <string name="category_music">Music</string>
    <string name="category_other">Other</string>
    <string name="category_picture">Pics</string>
    <string name="category_video">Videos</string>
    <string name="category_zip">Zips</string>
    <string name="category_sort_by_name">Sort By Name</string>
    <string name="category_sort_by_time">Sort By Time</string>
    <string name="category_sort_by_size_asc">Sort By Size Asc</string>
    <string name="category_sort_by_size_dsc">Sort By Size Dsc</string>
    <string name="action_menu_send">Send</string>
    <string name="action_menu_cut">Cut</string>
    <string name="action_menu_delete">Delete</string>
    <string name="action_menu_paste">paste</string>
    <string name="action_menu_more">More</string>
    <string name="action_menu_copy">Copy</string>
    <string name="action_menu_rename">Rename</string>
    <string name="action_menu_compress">Compress</string>
    <string name="action_menu_unzip">UnZip</string>
    <string name="action_menu_open_with">Open With</string>
    <string name="action_menu_detail">Detail</string>
    <string name="action_menu_create_new_folder">Create new folder</string>
    <string name="action_menu_show_hiden_file">Show hidden file</string>
    <string name="action_menu_hide_hiden_file">Hide hidden file</string>
    <string name="action_mode_select_all_text">Select All</string>
    <string name="action_mode_unselect_all_text">Unselect All</string>
    <string name="uncompress">uncompress</string>
    <string name="uncompress_to_file_path">Uncompress To Current File Path</string>
    <string name="uncompress_to_user_designated_path">Uncompress To Designated Path</string>
    <string name="extracting">Extracting</string>
    <string name="caculating">Caculating...</string>
    <string name="open_type">Open Type</string>
    <string name="rename">Rename</string>
    <string name="zip">Zip</string>
    <string name="zip_file_name_tip">Please Input File Name</string>
    <string name="preparing">Preparing...</string>
    <string name="compressing">Compressing</string>
    <string name="uncompressing">Uncompressing</string>
    <!--
    <plurals name="delete_tip">
        <item quantity="one">Do you want to delete this file.</item>
        <item quantity="two">Do you want to delete these two files.</item>
    </plurals>
    -->
    <plurals name="selected_item_count_format">
        <item quantity="zero">%d item selected</item>
        <item quantity="one">%d item selected</item>
        <item quantity="other">%d items selected</item>
    </plurals>
    <string name="no_app_to_open_file">No app to open this file</string>
    <string name="zero_item">%d item selected</string>
    <string name="no_file">no file</string>
    <string name="forc_succeeded">File Operation Succeeded.</string>
    <string name="forc_insufficient_space">Insufficient Space</string>
    <string name="forc_not_a_file">Zip entry is not a file</string>
    <string name="forc_file_not_exists">File does not exist</string>
    <string name="forc_user_cancelled">File operation cancelled by user</string>
    <string name="forc_illegal_args">Illegal arguments</string>
    <string name="forc_create_new_file_error">Create new file failed</string>
    <string name="forc_create_new_directory_error">Create new directory failed</string>
    <string name="forc_empty_zip_file">Zip file contains no files</string>
    <string name="forc_open_zip_file_failed">Open .zip file failed</string>
    <string name="forc_copy_or_move_into_child_direcotry_not_allowed">Please don\'t copy or move into subdirectories.</string>
    <string name="forc_rename_to_failed_when_moving">Rename to failed when moving</string>
    <string name="forc_file_zero_byte">File contains no content</string>
    <string name="forc_unknown_error">File operation failed. Unknown Error.</string>
    <string name="rc_succeeded">Unzip succeeded.</string>
    <string name="rc_insufficient_space">Insufficient space</string>
    <string name="rc_not_a_file">Zip entry is not a file</string>
    <string name="rc_user_cancelled">File Operation Cancelled By User</string>
    <string name="rc_illegal_args">Illegal Arguments</string>
    <string name="rc_cancelled_by_user">Unzip cancelled</string>
    <string name="rc_create_new_file_error">Create new file failed</string>
    <string name="rc_empty_zip_file">Zip file contains no files</string>
    <string name="rc_unknown">Unknown unzip error.</string>
    <string name="failed_due_to_sqlite_full">Operation failed because sqlite database is full.</string>
    <string name="cannot_format_internal_storage">Please don\'t format internal storage.</string>
    <string name="format_tip_title">Format</string>
    <string name="format_storage_tip">Formatting will erase all the data on this storage. Do you really want to continue?</string>
    <string name="formatting">Formatting...</string>
    <string name="open_zip_failed">Open zip file failed</string>
    <string name="deleting">Deleting...</string>
    <string name="copying">Copying...</string>
    <string name="moving">Moving...</string>
    <string name="category_path_title">Local storage</string>
    <string name="category_history">Current files</string>
    <string name="phone_storage">Internal storage</string>
    <string name="sd_storage">SD card</string>
    <string name="otg_storage">OTG storage</string>
    <string name="other_storage">Other storage</string>
    <string name="today">today</string>
    <string name="in_three_day">in three day</string>
    <string name="in_one_week">in one week</string>
    
    <string name="available_capacity">Available: %s</string>
    <string name="total_capacity">Total: %s</string>
    <string name="load_more">load more</string>
    <string name="file_count">%s items</string>
    <string name="zero_one_file_count">%s item</string>
    <plurals name="title_item_count_format">
        <item quantity="zero">" Item"</item>
        <item quantity="one">" Item"</item>
        <item quantity="other">" Items"</item>
    </plurals>
    <string name="global_search_his_title">Most recently searched</string>
    <string name="global_search_his_deleteall">Clear history</string>
    <string name="global_search_his_empty">No Records</string>
    <string name="optiontitle_compress">Compress</string>
    <string name="optiontitle_rename">Rename</string>
    <string name="optiontitle_delete">Delate</string>
    <string name="delete_dialogtitle">Delate...</string>
    <string name="confirm_know">OK</string>
    <string name="cancel">Cancel</string>
    <string name="copy_success">Copy success</string>
    <string name="copy_fail">Copy fail</string>
    <string name="cut_success">cut success</string>
    <string name="cut_fail">Cut fail</string>
    <string name="delete_success">Delete success</string>
    <string name="zip_success">Zip success</string>
    <string name="zip_fail">Zip fail</string>
    <string name="confirm_hiden_file_create">confirm hiden file create？</string>
    <string name="is_empty">file name is empty！</string>
    <string name="is_invide">file name is invide！</string>
    <string name="is_dot">file name is dot</string>
    <string name="is_too_long">file name is too long！</string>
    <string name="is_same_name">file name is same！</string>
    <string name="rename_success">Rename success！</string>
    <string name="rename_fail">Rename fail！</string>
    <string name="no_space">No space！</string>
    <string name="new_folder_success">Create new folder success</string>
    <string name="new_folder_fail">Create new folder fail</string>
    <string name="file_no_found">file not found</string>
    <string name="file_info_name">File name:</string>
    <string name="file_info_location">File Path:</string>
    <string name="file_info_modified">Modified:</string>
    <string name="file_info_size">File Size:</string>
    <string name="file_info_density">Resolution:</string>
    <string name="file_info_duration">Duration:</string>
    <string name="folder_num_info">folder_num:</string>
    <string name="file_num_info">file_num:</string>
    <string name="total_size_info">total_size:</string>
    <string name="select_file_target">select file target</string>
    <string name="not_alown_same_path_paste">Forbid same path paste</string>
    <string name="not_alown_same_path_cut">Forbid same path cut</string>
    <string name="send_not_alown_upper_to_ten">Send not alown upper to twenty</string>
    <string name="send_file">Send_file</string>
    <string name="open_file_method">Open file method</string>
    <string name="zip_file">zip file</string>
    <string name="and_so_on">%s and_so_on</string>
    <string name="item">items</string>
    <string name="delete_files">Delete files?</string>
    <string name="unknowfiles">unknow files can not be opened</string>
    <string name="empty_message">Content is empty</string>
    <string name="open_type_selection_text">Document</string>
    <string name="open_type_selection_audio">Music</string>
    <string name="open_type_selection_video">Video</string>
    <string name="open_type_selection_image">Picture</string>
    
    <string name="global_search_count">Searching...</string>
    <string name="loading_calculator_tip">Size Calculating...</string>
    <string name="exception_storage_info">Available:0.00KB / Total:0.00KB</string>
    <string name="storage">Storage management</string>
    <string name="search_hint">Search files</string>
    <string name="operation_search">Search</string>
    <string name="unknow_size_info">0</string>
    <string name="kilobyteShort">KB</string>
    <string name="megabyteShort">MB</string>
    <string name="gigabyteShort">GB</string>
    <string name="terabyteShort">TB</string>
    <string name="petabyteShort">PB</string>
</resources>
