<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/more"
        android:title="more"
        android:icon="@drawable/operation_more_normal"
        android:showAsAction="always">
        <menu>
            <group>
                <item android:id="@+id/create_new_folder"
                    android:title="@string/action_menu_create_new_folder"
                    android:showAsAction="always"/>
                <item android:id="@+id/category_sort"
                    android:title="@string/category_sort"
                    android:showAsAction="always">
                    <menu>
                        <group>
                            <item android:id="@+id/category_sort_by_name"
                                android:title="@string/category_sort_by_name"
                                android:showAsAction="always"/>
                            <item android:id="@+id/category_sort_by_time"
                                android:title="@string/category_sort_by_time"
                                android:showAsAction="always"/>
                            <item android:id="@+id/category_sort_by_size_asc"
                                android:title="@string/category_sort_by_size_asc"
                                android:showAsAction="always"/>
                            <item android:id="@+id/category_sort_by_size_dsc"
                                android:title="@string/category_sort_by_size_dsc"
                                android:showAsAction="always"/>
                        </group>
                    </menu>
                </item>
                <item android:id="@+id/show_hide_file"
                    android:title="@string/action_menu_show_hiden_file"
                    android:showAsAction="always"/>
                <item android:id="@+id/hide_hide_file"
                    android:title="@string/action_menu_hide_hiden_file"
                    android:showAsAction="always"/>
            </group>
        </menu>
    </item>

</menu>