<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <!--android:icon="@com.hb:drawable/ic_delete" -->
    <item
        android:id="@+id/action_menu_send"
        android:checked="true"
        android:title="@string/action_menu_send"
        android:showAsAction="always"/>

    <item
        android:id="@+id/action_menu_cut"
        android:checked="true"
        android:title="@string/action_menu_cut"
        android:showAsAction="always"/>

    <item
        android:id="@+id/action_menu_delete"
        android:checked="true"
        android:title="@string/action_menu_delete"
        android:showAsAction="always"/>



    <item android:id="@+id/action_menu_copy"
        android:title="@string/action_menu_copy"
        android:showAsAction="always"/>
    <item android:id="@+id/action_menu_rename"
        android:title="@string/action_menu_rename"
        android:showAsAction="always"/>
    <item android:id="@+id/action_menu_compress"
        android:title="@string/action_menu_compress"
        android:showAsAction="always"/>
    <item android:id="@+id/action_menu_open_with"
        android:title="@string/action_menu_open_with"
        android:showAsAction="always"/>
    <item android:id="@+id/action_menu_detail"
        android:title="@string/action_menu_detail"
        android:showAsAction="always"/>

    <!--
    <item android:id="@+id/action_menu_more"
        android:title="@string/action_menu_more"
        android:showAsAction="always">
        <menu>
            <group>
                <item android:id="@+id/action_menu_copy"
                    android:title="@string/action_menu_copy"
                    android:showAsAction="always"/>
                <item android:id="@+id/action_menu_rename"
                    android:title="@string/action_menu_rename"
                    android:showAsAction="always"/>
                <item android:id="@+id/action_menu_compress"
                    android:title="@string/action_menu_compress"
                    android:showAsAction="always"/>
                <item android:id="@+id/action_menu_open_with"
                    android:title="@string/action_menu_open_with"
                    android:showAsAction="always"/>
                <item android:id="@+id/action_menu_detail"
                    android:title="@string/action_menu_detail"
                    android:showAsAction="always"/>
            </group>
        </menu>
    </item>
    -->
</menu>